--- a/Routh-Hurwitz.ipynb
+++ b/Routh-Hurwitz.ipynb
@@ -1,4 +1,11 @@
 {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sucessful execution of this notebook require models-all directory"
+   ]
+  },
+{
  "cells": [
   {
    "cell_type": "code",
